--- a/_includes/post__taxonomy.html
+++ b/_includes/post__taxonomy.html
@@ -24,15 +24,24 @@
         {% assign tag_hashes = post_tags | split: ',' | sort %}
         <span class="page__taxonomy">
             <span itemprop="keywords">
+                <!-- 카테고리 수정하는 곳 -->
                 {%- for hash in category_hashes -%}
                     {%- assign keyValue = hash | split: '|' -%}
                     {%- capture category_word -%}{{ keyValue[1] | strip_newlines }}{%- endcapture -%}
-                    <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" rel="tag">{{ category_word }}</a>{%- unless forloop.last -%}<span class="sep"> </span>{%- endunless -%}
+                    <a href="{{ category_word | slugify | prepend: path_type | prepend: site.category_archive.path | relative_url }}" class="page__taxonomy-item-category" rel="tag">{{ category_word }} </a>{%- unless forloop.last -%}<span class="sep"> </span>{%- endunless -%}
                 {%- endfor -%}
-                {% for hash in tag_hashes %}
+                
+                <!-- 여기부터 태그 수정하는 곳 -->
+                {% assign check = true %} <!-- check 변수 선언 -->
+                {% for hash in tag_hashes %} 
                     {% assign keyValue = hash | split: '|' %}
                     {% capture tag_word %}{{ keyValue[1] | strip_newlines }}{% endcapture %}
-                    <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item-tag" rel="tag">{{ tag_word }}</a>{% unless forloop.last %}<span class="sep"> </span>{% endunless %}
+                    <a href="{{ tag_word | slugify | prepend: path_type | prepend: site.tag_archive.path | relative_url }}" class="page__taxonomy-item-tag" rel="tag"></a>{% unless forloop.last %}<span class="sep"> </span>{% endunless %}
+                    <!-- 원래 a태그 사이에 {{ tag_word }} 로 구성된걸 수정했음 -->
+                    {% if check %} <!-- true면 -->
+                        ...
+                        {% assign check = false %} <!-- false로 다시 초기화해서 ...을 1번만 나오게 -->
+                    {% endif %}
                 {% endfor %}
             </span>
         </span>
