--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -147,6 +147,7 @@ button:focus {
 }
 
 /* code */
+// md : ``, html : <code> </code>
 
 tt,
 code,
@@ -168,8 +169,10 @@ td > code {
   padding-top: 0.1rem;
   padding-bottom: 0.1rem;
   font-size: 0.8em;
-  background: $code-background-color;
   border-radius: $border-radius;
+  // background: $code-background-color;
+  color: $little-pink;
+  background-color: $little-gray;
 
   &:before,
   &:after {
