--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -55,16 +55,20 @@ $h-size-6: 1em !default; // ~16px
    Colors
    ========================================================================== */
 
+// custom Colors
+$little-dark-gray: #505050;
+$little-white: #f2f2f2;
+$little-blue: rgb(231, 243, 248);
+// custom Colors - code
+$little-gray: #f0f0f0;
+$little-pink: #d07d7d;
+
+
 $gray: #7a8288 !default;
 $dark-gray: mix(#000, $gray, 50%) !default;
 $darker-gray: mix(#000, $gray, 60%) !default;
 $light-gray: mix(#fff, $gray, 50%) !default;
 $lighter-gray: mix(#fff, $gray, 90%) !default;
-
-// custom Colors
-$little-dark-gray: #505050;
-$little-white: #f2f2f2;
-$little-blue: rgb(231, 243, 248);
 
 $background-color: #fff !default;
 $code-background-color: #fafafa !default;
