--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -11,7 +11,7 @@
 {% else %}
   {% assign crumb_path = site.category_archive.path %}
 {% endif %}
-
+<!-- style="font-family: Nanum Gothic Coding;" -->
 <nav class="breadcrumbs">
   <ol itemscope itemtype="https://schema.org/BreadcrumbList">
     {% assign crumbs = page.url | split: '/' %}
