--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -12,7 +12,8 @@ body {
   margin: 0;
   padding: 0;
   color: $text-color;
-  font-family: $global-font-family;
+  // font-family: $global-font-family; // 수정전
+  font-family: $monospace; // 수정후
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -29,7 +30,8 @@ h5,
 h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
-  font-family: $header-font-family;
+  // font-family: $header-font-family; // 수정전
+  font-family: $monospace; // 수정후
   font-weight: bold;
 }
 
