--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -12,7 +12,8 @@
   max-width: 100%;
   padding-left: 1em;
   padding-right: 1em;
-  font-family: $sans-serif;
+  // font-family: $sans-serif; // 수정전
+  font-family: $monospace; // 수정후
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.3s;
@@ -504,7 +505,8 @@
      ========================================================================== */
 
 .toc {
-  font-family: $sans-serif-narrow;
+  // font-family: $sans-serif-narrow; // 수정전
+  font-family: $monospace; // 수정후
   color: $gray;
   background-color: $background-color;
   border: 1px solid $border-color;
