--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -6,3 +6,5 @@
 
 @import "minimal-mistakes/skins/{{ site.minimal_mistakes_skin | default: 'default' }}"; // skin
 @import "minimal-mistakes"; // main partials
+
+@import url('https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding:wght@400;700&display=swap');
