mathjax 수식 지원 코드

--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -26,3 +26,11 @@
     <script src="{{ script | relative_url }}"></script>
   {% endfor %}
 {% endif %}
+
+<!-- mathjax 문법 사용가능하게 하기 위해 추가 -->
+{% if page.mathjax %}
+<script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+<script id="MathJax-script" defer
+        src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
+</script>
+{% endif %}
