--- a/_layouts/archive.html
+++ b/_layouts/archive.html
@@ -19,7 +19,8 @@ layout: default
 
   <div class="archive">
     {% unless page.header.overlay_color or page.header.overlay_image %}
-      <h1 id="page-title" class="page__title">{{ page.title }}</h1>
+      <!-- <h1 id="page-title" class="page__title">{{ page.title }}</h1> 수정전 -->
+      <h3 class="archive__subtitle">{{ page.title | default: "Recent Posts" }}</h3>
     {% endunless %}
     {{ content }}
   </div>
