--- a/_includes/archive-single2.html
+++ b/_includes/archive-single2.html
@@ -15,7 +15,7 @@
   <article class="archive-item">
       <div>
           <span>
-            <a href="{{ post.url }}">{{post.title}}</a>
+            <a href="{{ post.url }}" style="text-decoration-line: none;">{{post.title}}</a>
           </span>
           <small> 
             <i class="fas fa-fw fa-calendar-alt" aria-hidden="true"> </i>{{ post.date | date: " %Y.%m.%d" }}
