--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -12,8 +12,7 @@
   max-width: 100%;
   padding-left: 1em;
   padding-right: 1em;
-  // font-family: $sans-serif; // 수정전
-  font-family: $monospace; // 수정후
+  font-family: $sans-serif;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.3s;
@@ -441,9 +440,17 @@
 .nav__list .nav__items {
   margin: 0;
   font-size: 1.25rem;
+  font-family: $sans-serif;
 
-  a {
+  a { // color: inherit만 있었음
     color: inherit;
+    font-size: $type-size-4;
+    font-family: $cute;
+    color: mix(#fff,$primary-color,30%);
+
+    &:hover {
+      text-decoration: underline;
+    }
   }
 
   .active {
@@ -493,10 +500,11 @@
   display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
-  font-family: $sans-serif-narrow;
-  font-size: $type-size-6;
+  font-family: $serif;
+  font-size: $type-size-4; // 수정
   font-weight: bold;
   text-transform: uppercase;
+  color: mix(#fff,$primary-color,20%);
   border-bottom: 1px solid $border-color;
 }
 
@@ -506,7 +514,7 @@
 
 .toc {
   // font-family: $sans-serif-narrow; // 수정전
-  font-family: $monospace; // 수정후
+  font-family: $cute; // 수정후
   color: $gray;
   background-color: $background-color;
   border: 1px solid $border-color;
@@ -516,7 +524,7 @@
 
   .nav__title {
     color: #fff;
-    font-size: $type-size-6;
+    font-size: $type-size-5;
     background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
@@ -533,10 +541,10 @@
   padding: 0;
   width: 100%;
   list-style: none;
-  font-size: $type-size-6;
+  font-size: $type-size-5;
 
   @include breakpoint($large) {
-    font-size: $type-size-7;
+    font-size: $type-size-6;
   }
 
   a {
