--- a/_sass/minimal-mistakes/_sidebar.scss
+++ b/_sass/minimal-mistakes/_sidebar.scss
@@ -56,9 +56,9 @@
 
   p,
   li {
-    font-family: $sans-serif;
+    font-family: $serif; // 수정
     font-size: $type-size-6;
-    line-height: 1.5;
+    line-height: 1.3;
   }
 
   img {
@@ -134,8 +134,9 @@
   }
 
   img {
-    max-width: 110px;
-    border-radius: 50%;
+    // max-width: 110px;
+    max-width: 190px;
+    border-radius: 20%;
 
     @include breakpoint($large) {
       padding: 5px;
@@ -150,6 +151,7 @@
   padding-left: 15px;
   padding-right: 25px;
   line-height: 1;
+  font-family: $cute;
 
   @include breakpoint($large) {
     display: block;
@@ -173,16 +175,24 @@
   }
 }
 .sidebar .author__name {
-  font-family: $sans-serif;
-  font-size: $type-size-5;
+  font-family: $cute; // 수정
+  font-size: $type-size-4; // 수정(전에 5)
 }
 
 .author__bio {
   margin: 0;
+  font-family: $cute; // 추가
 
   @include breakpoint($large) {
     margin-top: 10px;
     margin-bottom: 20px;
+  }
+
+  p {
+    font-family: $cute;
+    margin-top: 1.6px;
+    margin-bottom: 3px;
+    font-size: $type-size-5;
   }
 }
 
