style : 게시물 본문 폰트 설정

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -69,14 +69,10 @@ body {
 }
 
 .page__title {
-  font-family: $monospace; // 수정후
+  font-family: $cute; // 수정후
   margin-top: 0;
   line-height: 1;
-
-  a {
-    color: $text-color;
-    text-decoration: none;
-  }
+  color: mix(#fff, $primary-color, 40%);
 
   & + .page__meta {
     margin-top: -0.5em;
@@ -89,6 +85,8 @@ body {
 }
 
 .page__content {
+  margin-top: 20px; // 게시글 제목과 본문 거리를 벌리기 위함
+
   h2 {
     padding-bottom: 0.5em;
     padding-left: 0.5em;
