style : 밑줄제거 및 본문 폰트 설정
되도록이면 수정하지 말것

--- a/_sass/minimal-mistakes/_base.scss
+++ b/_sass/minimal-mistakes/_base.scss
@@ -12,8 +12,7 @@ body {
   margin: 0;
   padding: 0;
   color: $text-color;
-  // font-family: $global-font-family; // 수정전
-  font-family: $monospace; // 수정후
+  font-family: $global-font-family;
   line-height: 1.5;
 
   &.overflow--hidden {
@@ -30,8 +29,7 @@ h5,
 h6 {
   margin: 2em 0 0.5em;
   line-height: 1.2;
-  // font-family: $header-font-family; // 수정전
-  font-family: $monospace; // 수정후
+  font-family: $header-font-family;
   font-weight: bold;
 }
 
@@ -128,6 +126,7 @@ blockquote {
 /* links */
 
 a {
+  text-decoration: none;
   &:focus {
     @extend %tab-focus;
   }
