--- a/_includes/page__meta.html
+++ b/_includes/page__meta.html
@@ -10,7 +10,7 @@
       </span>
     {% endif %}
 
-    {% if document.read_time and document.show_date %}<span class="page__meta-sep"></span>{% endif %}
+    <!-- {% if document.read_time and document.show_date %}<span class="page__meta-sep"></span>{% endif %} -->
 
     <!-- {% if document.read_time %}
       {% assign words_per_minute = document.words_per_minute | default: site.words_per_minute | default: 200 %}
