--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -62,8 +62,8 @@ $little-dark-gray: #505050;
 $little-white: #f2f2f2;
 $little-blue: rgb(231, 243, 248);
 // custom Colors - code
-$little-gray: #f0f0f0;
-$little-pink: #d07d7d;
+// $little-gray: #f0f0f0;
+// $little-pink: #d07d7d;
 
 
 $gray: #7a8288 !default;
