--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,3 +1,6 @@
+<!-- 20231215 ADD favicon-->
+<link rel="icon" type="image/png" href="/assets/imgaes/favicon.ico">
+
 <meta charset="utf-8">
 
 {% include seo.html %}
