docs: 깃블로그 중요한 TIP과 주의사항 정리

--- a/_includes/post_pagination.html
+++ b/_includes/post_pagination.html
@@ -32,7 +32,7 @@
 
 
 
-<!-- 지킬의 기본제공 코드 : 최신글 기준으로 제공 -->
+<!-- 지킬의 기본제공 코드 : 최신글 기준으로 제공 - 이 코드 사용 안하는중! 그래서 comment 로 주석처리 했음 -->
 {% comment %}
 {% if page.previous or page.next %}
   <nav class="pagination">
