--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,10 +10,11 @@
 -->
 <html lang="{{ site.locale | slice: 0,2 | default: "en" }}" class="no-js">
   <head>
+    <!-- 20231215 ADD favicon 아마 안먹히는 중 -->
+    <link rel="icon" type="image/png" href="/assets/imgaes/favicon.ico">
     <!--폰트 : "Nanum Gothic Coding", "Coming Soon"-->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
-    
     <!--폰트 : "Iropke Batang"-->
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
