--- a/_sass/minimal-mistakes/_archive.scss
+++ b/_sass/minimal-mistakes/_archive.scss
@@ -58,6 +58,7 @@
   font-family: $serif; // 수정후
 
   + .list__item .archive__item-title {
+    font-family: $cute; // 수정후
     margin-top: 0.5em;
   }
 }
