--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -61,10 +61,6 @@ $h-size-6: 1em !default; // ~16px
 $little-dark-gray: #505050;
 $little-white: #f2f2f2;
 $little-blue: rgb(231, 243, 248);
-// custom Colors - code
-// $little-gray: #f0f0f0;
-// $little-pink: #d07d7d;
-
 
 $gray: #7a8288 !default;
 $dark-gray: mix(#000, $gray, 50%) !default;
@@ -160,7 +156,7 @@ $medium: 768px !default;
 $medium-wide: 900px !default;
 $large: 1024px !default;
 // $x-large: 1280px !default; // 수정전
-$x-large: 1400px !default;
+$x-large: 1400px !default; // 수정후
 $max-width: $x-large !default;
 
 /*
