--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,19 +12,21 @@
   <head>
     <!-- 20231215 ADD favicon 아마 안먹히는 중 -->
     <link rel="icon" type="image/png" href="/assets/imgaes/favicon.ico">
+
     <!--폰트 : "Nanum Gothic Coding", "Coming Soon"-->
     <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Coming+Soon&family=Nanum+Gothic+Coding&display=swap">
     <!--폰트 : "Iropke Batang"-->
     <link rel="preload" as="style" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css">
-
-    <!--폰트 : "Cafe24Oneprettynight"-->
+    <!--폰트(main.css 에서 등록) : "Cafe24Oneprettynight"-->
     
     <!--main.scss 빨리 로드되게끔.. preload-->
     <link rel="preload" as="style" href="{{ '/assets/css/main.css' | relative_url }}">
+
     {% include head.html %}
     {% include head/custom.html %}
+
     <style> 
     /* 스크롤바 커스텀 */
       ::-webkit-scrollbar{width: 16px;}
