--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -440,12 +440,12 @@
 .nav__list .nav__items {
   margin: 0;
   font-size: 1.25rem;
-  font-family: $sans-serif;
+  // font-family: $sans-serif;
 
   a { // color: inherit만 있었음
     color: inherit;
     font-size: $type-size-4;
-    font-family: $cute;
+    font-family: $cute; // 수정
     color: mix(#fff,$primary-color,30%);
 
     &:hover {
@@ -500,7 +500,7 @@
   display: block;
   margin: 0.5rem 0;
   padding: 0.25rem 0;
-  font-family: $serif;
+  font-family: $serif; // 수정
   font-size: $type-size-4; // 수정
   font-weight: bold;
   text-transform: uppercase;
@@ -524,7 +524,7 @@
 
   .nav__title {
     color: #fff;
-    font-size: $type-size-5;
+    font-size: $type-size-4; // 6->4 수정
     background: $primary-color;
     border-top-left-radius: $border-radius;
     border-top-right-radius: $border-radius;
@@ -541,10 +541,10 @@
   padding: 0;
   width: 100%;
   list-style: none;
-  font-size: $type-size-5;
+  font-size: $type-size-4; // 6->4 수정
 
   @include breakpoint($large) {
-    font-size: $type-size-6;
+    font-size: $type-size-5; // 7->5 수정
   }
 
   a {
