--- a/_sass/minimal-mistakes/_syntax.scss
+++ b/_sass/minimal-mistakes/_syntax.scss
@@ -9,7 +9,8 @@ figure.highlight {
   background: $base00; // 코드블록 배경색
   color: $base05; // 코드블록 내부 텍스트 기본색
   font-family: $monospace;
-  font-size: $type-size-6;
+  // font-size: $type-size-6;
+  font-size: 1em; // 코드블록 내부 텍스트 사이즈
   line-height: 1.8;
   border-radius: $border-radius;
 
